apps/postgresql/pgpool.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgpool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgpool
  template:
    metadata:
      labels:
        app: pgpool
    spec:
      containers:
        - name: pgpool
          image: bitnami/pgpool
---
apiVersion: v1
kind: Service
metadata:
  name: pgpool
spec:
  selector:
    app: pgpool
  ports:
    - name: pgpool-port
      protocol: TCP
      port: 9999
      targetPort: 9999
