apps/postgresql/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-allow-cnpg
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
    - fromEndpoints:
        - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pooler-allow-clients
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/podRole: pooler
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: pgadmin
            io.kubernetes.pod.namespace: pgadmin
        - matchLabels:
            app.kubernetes.io/name: harbor
            io.kubernetes.pod.namespace: harbor
        - matchLabels:
            app: keycloak
            io.kubernetes.pod.namespace: keycloak
        - matchLabels:
            app: n8n
            io.kubernetes.pod.namespace: n8n
      toPorts:
        - ports:
            - port: "5432"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-migrate
spec:
  endpointSelector:
    matchLabels:
      app: postgres-migrate
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            cnpg.io/podRole: pooler
      toPorts:
        - ports:
            - port: "5432"
